--- a/Windows/Properties/Resources.resx
+++ b/Windows/Properties/Resources.resx
@@ -147,6 +147,9 @@
   <data name="QuestionMark_Dark" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\question-mark_dark.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Shadowmask_Icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Shadowmask_Icon_Minimal.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Spinner" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlhyADIAPcAAAAAACRuvyyI7iyI7iyI7iyI7iyI7i2J7y2J7y2J7y2J7y2J7y2J7y2J7y2J7y2J
